Added appointment get and update endpoint feat: Added appointment get endpoint /appointments/:id      method: GET feat: Added appointment update endpoint /appointments/:id   method: DELETE
